refactor: 하드코딩 상수 추출 및 코드 정리 (#74)
- CookieConstants 클래스 추가 (accessToken, refreshToken)
- JwtFilter, AuthController 쿠키 이름 상수 적용
- PaymentService Toss 웹훅 매직 스트링 상수 추출
- PaymentService Collectors.toList() → toList() 전환
- AuthContext 중복 localStorage 로직 함수로 분리